--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ __pycache__
 __pycache__/
 Ladder/backend/divisions/migrations/__pycache__/
 Ladder/backend/match/__pycache__/
+/Ladder/backend/divisions/migrations/__pycache__
