--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ Ladder/backend/divisions/migrations/__pycache__/
 Ladder/backend/match/__pycache__/
 /Ladder/backend/divisions/migrations/__pycache__
 
+/Ladder/backened/db.sqlite3
+
+
