--- a/Ladder/frontend/package.json
+++ b/Ladder/frontend/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "flowbite-react": "^0.9.0",
     "material-react-table": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
