--- a/Ladder/frontend/package.json
+++ b/Ladder/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "flowbite-react": "^0.9.0",
+    "jwt-decode": "^4.0.0",
     "material-react-table": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
