--- a/Ladder/backend/requirements.txt
+++ b/Ladder/backend/requirements.txt
@@ -13,6 +13,7 @@ djoser==2.2.2
 idna==3.6
 oauthlib==3.2.2
 pillow==10.3.0
+psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
