--- a/amplify.yml
+++ b/amplify.yml
@@ -4,7 +4,7 @@ applications:
       phases:
         preBuild:
           commands:
-            - cd NG-Volleyball-Capstone-2/Ladder/frontend
+            - cd Ladder/frontend
             - npm install
         build:
           commands:
